tests/rosetta/transpiler/Java/conditional-structures-2.java
public class Main {
    static void example2(boolean flag) {
        if (flag) {
            null;
        } else {
            null;
        }
    }
    public static void main(String[] args) {
    }
}
